# Programming2

./: .gitignore
khapilov_a_o/: 0263a.cpp  0276a.cpp  0485a.cpp  0499a.cpp  0978a.cpp  1501a.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1649a.cpp  1669d.cpp  1670b.cpp  1671a.cpp  1675c.cpp  1678a.cpp  1690d.cpp  1743c.cpp  1744c.cpp  1744d.cpp  CMakeLists.txt  bpm_22_3_1.cpp  bpm_22_3_2.cpp  bpm_22_3_3.cpp  hw-05-01.cpp  hw-05-02.cpp  hw-05-03.cpp  mouse_and_cat.cpp  vector.cpp  vectors.h
khapilov_a_o/RationalProject/: CMakeLists.txt  rational.doctest.cpp
khapilov_a_o/RationalProject/rational/: CMakeLists.txt  rational.cpp  rational.hpp
khapilov_a_o/arrayD_prj/prj.lab/arrayD/: CMakeLists.txt  arrayD.cpp
khapilov_a_o/arrayD_prj/prj.lab/arrayD/include/arrayD/: arrayD.hpp
khapilov_a_o/arrayD_prj/prj.test/: CMakeLists.txt
khapilov_a_o/arrayd/prj.lab/: CMakeLists.txt
khapilov_a_o/arrayd/prj.lab/arrayD/: CMakeLists.txt  arrayD.cpp
khapilov_a_o/arrayd/prj.lab/arrayD/include/arrayD/: arrayD.hpp
khapilov_a_o/arrayd/prj.lab/arrayd/: arrayd.cpp
khapilov_a_o/arrayd/prj.lab/arrayd/include/arrayd/: arrayd.hpp
khapilov_a_o/arrayd/prj.test/: CMakeLists.txt  arrayD_test.cpp
khapilov_a_o/prj.cw/: CMakeLists.txt
khapilov_a_o/prj.cw/darwin_simul/: CMakeLists.txt
khapilov_a_o/prj.cw/darwin_simul/docs/: Doxyfile.in
khapilov_a_o/prj.cw/darwin_simul/examples/: CMakeLists.txt  example.cpp  generator.cpp
khapilov_a_o/prj.cw/darwin_simul/examples/src/pl_he_pr_simul/: CMakeLists.txt
khapilov_a_o/prj.cw/darwin_simul/examples/src/pl_he_pr_simul/include/pl_he_pr_simul/: pl_he_pr_simul.hpp
khapilov_a_o/prj.cw/darwin_simul/include/darwin_simul/: darwin_simul.hpp
khapilov_a_o/prj.cw/darwin_simul/test/: CMakeLists.txt
khapilov_a_o/prj.cw/doc/: Doxyfile.in
khapilov_a_o/prj.cw/examples/: CMakeLists.txt  example.cpp  generator.cpp
khapilov_a_o/prj.cw/examples/src/pl_he_pr_simul/: CMakeLists.txt
khapilov_a_o/prj.cw/examples/src/pl_he_pr_simul/include/pl_he_pr_simul/: pl_he_pr_simul.hpp
khapilov_a_o/prj.cw/include/darwin_simul/: darwin_simul.hpp
khapilov_a_o/prj.cw/test/: CMakeLists.txt  test.cpp
khapilov_a_o/prj.lab/: CMakeLists.txt  orto.cpp
khapilov_a_o/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
khapilov_a_o/prj.lab/arrayd/include/arrayd/: arrayd.hpp
khapilov_a_o/prj.lab/arrayt/include/arrayt/: arrayt.hpp
khapilov_a_o/prj.lab/figure/: CMakeLists.txt
khapilov_a_o/prj.lab/geo2d/: CMakeLists.txt
khapilov_a_o/prj.lab/geo2d/include/geo2d/figures/: figure.hpp  point.hpp  polygon.hpp  polyline.hpp
khapilov_a_o/prj.lab/geo2d/include/geo2d/space/: coordinates.hpp
khapilov_a_o/prj.lab/matrixs/: matrixs.cpp
khapilov_a_o/prj.lab/matrixs/include/matrixs/: matrixs.hpp
khapilov_a_o/prj.lab/rational/: rational.cpp
khapilov_a_o/prj.lab/rational/include/rational/: rational.hpp
khapilov_a_o/prj.test/: CMakeLists.txt  arrayd.test.cpp  arrayt.test.cpp  matrixs.test.cpp  rational.test.cpp  test.txt
khapilov_a_o/rational/prj.lab/rational/: rational.cpp
khapilov_a_o/rational/prj.lab/rational/include/rational/: rational.hpp
khapilov_a_o/rational_prj/prj.lab/rational/: rational.cpp
khapilov_a_o/rational_prj/prj.lab/rational/include/rational/: rational.hpp
khapilov_a_o/rational_prj/prj.test/: rational_test.cpp
